...
							navigationModel.presentContent(ContentView1.id) {
								OnDidAppearExample()
							}
						}, label: {
							Text("Show OnDidAppear Examples")
						})
							.accessibility(identifier: "OnDidAppearExamplesButton")
					}

					Spacer()
				}
				Spacer()
			}
...
